--- a/app/css/input.css
+++ b/app/css/input.css
@@ -1,12 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
 
 @tailwind base;
 @tailwind components;
