--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,12 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
 
 /*
 ! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
@@ -591,8 +585,8 @@ video {
   grid-column: span 2 / span 2;
 }
 
-.m-6{
-  margin: 1.5rem;
+.m-3{
+  margin: 0.75rem;
 }
 
 .mx-auto{
@@ -628,6 +622,10 @@ video {
 
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
 }
 
 .mb-5{
@@ -788,10 +786,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -836,11 +830,6 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.bg-gray-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -851,27 +840,13 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-l{
-  background-image: linear-gradient(to left, var(--tw-gradient-stops));
-}
-
-.from-transparent{
-  --tw-gradient-from: transparent;
-  --tw-gradient-to: rgb(0 0 0 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-neutral-50{
-  --tw-gradient-to: #fafafa;
-}
-
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.p-40{
-  padding: 10rem;
+.p-28{
+  padding: 7rem;
 }
 
 .p-6{
@@ -918,19 +893,13 @@ video {
   padding-right: 1.25rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.pl-6{
+  padding-left: 1.5rem;
 }
 
 .text-left{
@@ -941,16 +910,12 @@ video {
   text-align: center;
 }
 
-.font-Poppins{
-  font-family: Poppins, sans-serif;
+.font-Josefin{
+  font-family: Josefin Sans, sans-serif;
 }
 
 .font-Vampiro{
   font-family: Vampiro One, cursive;
-}
-
-.font-sans{
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-3xl{
@@ -978,6 +943,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
@@ -996,8 +966,8 @@ video {
   font-weight: 700;
 }
 
-.font-light{
-  font-weight: 300;
+.font-semibold{
+  font-weight: 600;
 }
 
 .font-thin{
@@ -1006,10 +976,6 @@ video {
 
 .uppercase{
   text-transform: uppercase;
-}
-
-.capitalize{
-  text-transform: capitalize;
 }
 
 .leading-9{
@@ -1024,6 +990,11 @@ video {
   line-height: 1.5;
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1032,11 +1003,6 @@ video {
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -1138,22 +1104,9 @@ video {
   --tw-bg-opacity: 0.3;
 }
 
-.hover\:bg-gradient-to-r:hover{
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.hover\:font-semibold:hover{
-  font-weight: 600;
-}
-
 .hover\:text-gray-300:hover{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.hover\:text-black:hover{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-lg:hover{
@@ -1193,24 +1146,24 @@ video {
     margin-right: -2rem;
   }
 
+  .sm\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
   .sm\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
   }
 
-  .sm\:text-8xl{
-    font-size: 6rem;
+  .sm\:text-6xl{
+    font-size: 3.75rem;
     line-height: 1;
   }
 
   .sm\:text-xs{
     font-size: 0.75rem;
     line-height: 1rem;
-  }
-
-  .sm\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
@@ -1273,22 +1226,12 @@ video {
     font-size: 0.75rem;
     line-height: 1rem;
   }
-
-  .md\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
 }
 
 @media (min-width: 1280px){
   .lg\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
@@ -1301,5 +1244,10 @@ video {
   .xl\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .xl\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
