--- a/mahasiswa/app/css/input.css
+++ b/mahasiswa/app/css/input.css
@@ -6,13 +6,13 @@
 
 @layer components {
   .btn {
-    @apply relative rounded-3xl bg-gradient-to-l from-blue-600 to-purple-700 px-5 py-3 text-center capitalize text-white hover:bg-gradient-to-r hover:font-semibold hover:text-yellow-400 sm:text-base md:text-base lg:text-base xl:text-base;
+    @apply mt-10 rounded-3xl bg-gray-800 px-4 py-2 font-semibold text-white hover:bg-gray-900 sm:text-xs md:text-xs lg:text-sm xl:text-sm;
   }
-  .btn2 {
-    @apply relative -top-1 -left-1 bg-gray-800 py-2.5 px-5 font-bold capitalize text-white transition-all before:absolute before:top-1 before:left-1 before:-z-[1] before:h-full before:w-full before:border-2 before:border-gray-700 before:transition-all before:content-[''] hover:top-0 hover:left-0 before:hover:top-0 before:hover:left-0;
+  .btnmid {
+    @apply mt-10 rounded-full bg-gray-800 px-8 py-3 text-base font-semibold text-white hover:bg-gray-900;
   }
-  .btn3 {
-    @apply relative rounded-xl bg-gradient-to-l from-transparent to-violet-400 px-5 py-3 text-center capitalize text-white hover:bg-gradient-to-r hover:font-semibold hover:text-black sm:text-base md:text-base lg:text-base xl:text-base;
+  .btnbig {
+    @apply mt-10 rounded-full bg-gray-800 px-14 py-6 text-base font-semibold text-white hover:bg-gray-900;
   }
   .datainput {
     @apply w-56 rounded-lg border-none py-1.5 px-3 text-xs text-black placeholder-gray-500 ring-1 ring-gray-300 focus:ring-2 focus:ring-gray-500;
@@ -23,9 +23,12 @@
 }
 
 body {
-  background-image: url(/svg/Sprinkle.svg);
-  background-repeat: repeat;
-  background-size: cover;
+  background: rgb(6, 6, 6);
+  background: radial-gradient(
+    circle,
+    rgba(6, 6, 6, 1) 0%,
+    rgba(71, 30, 97, 1) 100%
+  );
   margin-left: auto;
   margin-right: auto;
   font-family: Poppins;
